# sil-kit-adapters-tap-ci-tests

./: CMakeLists.txt  CMakePresets.json  dummy.txt
.github/actions/build-cmake-preset/: action.yml
.github/workflows/: build-linux-release.yml
tap/adapter/: CMakeLists.txt
tap/demos/IcmpEchoDevice/: CMakeLists.txt
